# snake-wgpu

./: Cargo.toml
src/: frame.rs  game.rs  main.rs  renderer.rs  vertex.rs
src/drawable/: mod.rs  rectangle.rs  snake.rs  triangle.rs
src/shapes/: drawable.rs  mod.rs  rectangle.rs  triangle.rs
