[package]
name = "snake-wgpu"
version = "0.1.0"
authors = ["shika-blyat <abdelzighem1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.4"
winit = "0.22.2"
wgpu = "0.5.0"
futures = "0.3.5"
shaderc = "0.6"
bytemuck = "1.2.0"